--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "discord.js": "^14.7.1",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "vcards-js": "^2.10.0"
   }
 }
